--- a/soaringeagle-app/src/css/Layout.css
+++ b/soaringeagle-app/src/css/Layout.css
@@ -13,11 +13,39 @@ label {
     /*margin-right: 1em;*/
 }
 
+.voterreg {
+    list-style-type: none;
+
+
+    padding: 0;
+    margin: 0;
+}
+
 .voterreg > label {
-    display: block;
+    display: grid;
+    /*grid-template-columns: 5fr 10fr;*/
+    grid-template-columns: 10% 30%;
+
+    /*display: grid;*/
+    /*text-align: center;*/
     padding: 10px;
     /*float: left;*/
-    /*width: 100%*/
+    width: 100%
+
+    /*width: 10em;*/
+    /*margin-right: 1em;*/
+}
+
+.voterreg > button {
+    /*grid-template-columns: 5fr 10fr;*/
+
+    /*display: grid;*/
+    /*text-align: center;*/
+    padding: 10px;
+    justifyContent: center;
+    alignItems: center;
+    verticalAlign: right;
+    width: 10%
 
     /*width: 10em;*/
     /*margin-right: 1em;*/
@@ -25,6 +53,8 @@ label {
 
 
 .voterreg > text {
+    display: grid;
+
     /*display: block;*/
     /*width: 10%;*/
     /*padding: 2px;*/
@@ -35,12 +65,21 @@ label {
     width: 100%;
     padding: 1px 20px;
     margin: 8px 0;
-    display: inline-block;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 100px;
     box-sizing: border-box;
 }
 
+.voterreg > box {
+    width: 10px;
+    height: 100px;
+    margin: 0 auto;
+    border: 1px solid blue;
+    textAlign: center;
+    verticalAlign: right;
+    lineHeight: 90px;
+    backgroundColor: red;
+}
 
 .container {
     position: fixed;
