--- a/soaringeagle-app/src/css/Layout.css
+++ b/soaringeagle-app/src/css/Layout.css
@@ -352,27 +352,28 @@ ul {
 }
 
 .wrapper {
-    width: 85%;
-	margin: 0 auto;
+    width: 50%;
+	/*margin: 0 auto;*/
 }
 
 header .logo {
 	display: inline;
-	border-left: 1px dashed #333333;
-	padding: 0 0 25px 10px;
+	/*border-left: 1px dashed #333333;*/
+	padding: 0 0 20px 10px;
 	text-decoration: none;
 	float: left;
 	font-size: 30px;
 	color: #cc3333;
-	margin: 25px 0px;
+	margin: 20px 0px;
 }
 header .logo {
   position:relative;
 }
 header .logo span {
-  color:black;
+  color:rgba(0, 0, 0, 0.534);
   white-space:nowrap;
-  font-size:18px;
+  font-size:12px;
+  font-weight: bold;
   position:absolute;
   bottom:0;
   left:10px;
