--- a/soaringeagle-app/src/css/Layout copy.css
+++ b/soaringeagle-app/src/css/Layout copy.css
@@ -39,7 +39,83 @@ form {
     margin: 0 auto;    
 }
 
+.voterreg {
+    list-style-type: none;
 
+    padding: 0;
+    margin: 0;
+}
+
+.voterreg > label {
+    display: grid;
+    /*grid-template-columns: 5fr 10fr;*/
+    grid-template-columns: 10% 20%;
+
+    /*display: grid;*/
+    /*text-align: center;*/
+    padding: 10px;
+    /*float: left;*/
+    width: 100%
+
+    /*width: 10em;*/
+    /*margin-right: 1em;*/
+}
+
+.voterreg > button {
+    /*grid-template-columns: 5fr 10fr;*/
+
+    /*display: grid;*/
+    /*text-align: center;*/
+    padding: 10px;
+    justifyContent: center;
+    alignItems: center;
+    verticalAlign: right;
+    width: 10%
+
+    /*width: 10em;*/
+    /*margin-right: 1em;*/
+}
+
+
+.voterreg > text {
+    display: grid;
+
+    /*display: block;*/
+    /*width: 10%;*/
+    /*padding: 2px;*/
+    /*float: right;*/
+    /*width: 10em;*/
+    /*margin-right: 1em;*/
+
+    width: 100%;
+    padding: 1px 20px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 100px;
+    box-sizing: border-box;
+}
+
+.voterreg > box {
+    width: 10px;
+    height: 100px;
+    margin: 0 auto;
+    border: 1px solid blue;
+    textAlign: center;
+    verticalAlign: right;
+    lineHeight: 90px;
+    backgroundColor: red;
+}
+
+.container {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .container * {
+    box-sizing: border-box;
+  }
+  
   .flex-outer,
   .flex-inner {
     list-style-type: none;
@@ -47,7 +123,7 @@ form {
   }
   
   .flex-outer {
-    max-width: 800px;
+    /*max-width: 800px;*/
     margin: 0 auto;
   }
   
@@ -56,7 +132,6 @@ form {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    padding: 10px;
   }
   
   .flex-inner {
@@ -101,26 +176,15 @@ form {
     margin-left: auto;
     padding: 8px 16px;
     border: none;
-    background: rgba(196, 194, 193, 0.781);
+    background: rgba(228, 138, 3, 0.781);
     color: #f2f2f2;
     text-transform: uppercase;
     letter-spacing: .09em;
     border-radius: 2px;
-    display: flex;
-    justify-content: center;
   }
   
   .flex-inner li {
     width: 100px;
-    align-content: center;
-  }
-
-  .liBtn {
-    width: 50px;
-    align-content: center;
-    align-items: center;
-    display: flex;
-    justify-content: center;    
   }
 
 .container {
